--- a/app/src/main/res/layout/category_product_list.xml
+++ b/app/src/main/res/layout/category_product_list.xml
@@ -210,340 +210,16 @@
         android:textSize="17sp"
         app:layout_constraintTop_toBottomOf="@id/category_horizontal_scrollview_id" />
 
-    <ScrollView
-        android:id="@+id/scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:contentDescription="Description of your first scroll view"
-        android:scrollbars="none"
-        app:layout_constraintTop_toBottomOf="@+id/winter_update_text_id">
 
-        <LinearLayout
-            android:id="@+id/linear_view_all_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/linear_view_vertical_id1"
-                    android:layout_width="205dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <android.widget.Button
-                        android:id="@+id/btn_product_id1"
-                        android:layout_width="205dp"
-                        android:layout_height="200dp"
-                        android:layout_margin="0dp"
-                        android:background="@color/category_light_gray_color"
-                        android:contentDescription="My Button Description"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_brand_text_id1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="41dp"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="center_vertical"
-                        android:text="브랜드 명"
-                        android:textSize="10sp"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_name_text_id1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="61dp"
-                        android:gravity="center_vertical"
-                        android:layout_marginLeft="10dp"
-                        android:text="상품 이름"
-                        android:textStyle="bold"
-                        android:textSize="20sp"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_price_text_id1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="49dp"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="center_vertical"
-                        android:text="1000000원"
-                        android:textSize="15sp"
-                        />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/linear_view_vertical_id2"
-                    android:layout_width="205dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <android.widget.Button
-                        android:id="@+id/btn_product_id2"
-                        android:layout_width="205dp"
-                        android:layout_height="200dp"
-                        android:layout_margin="0dp"
-                        android:background="@color/category_light_gray_color"
-                        android:contentDescription="My Button Description"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_brand_text_id2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="41dp"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="center_vertical"
-                        android:text="브랜드 명"
-                        android:textSize="10sp"/>
-
-                    <TextView
-                        android:id="@+id/product_name_text_id2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="61dp"
-                        android:gravity="center_vertical"
-                        android:layout_marginLeft="10dp"
-                        android:textStyle="bold"
-                        android:text="상품 이름"
-                        android:textSize="20sp"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_price_text_id2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="49dp"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="center_vertical"
-                        android:text="1000000원"
-                        android:textSize="15sp"
-                        />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/linear_view_vertical_id3"
-                    android:layout_width="205dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <android.widget.Button
-                        android:id="@+id/btn_product_id3"
-                        android:layout_width="205dp"
-                        android:layout_height="200dp"
-                        android:layout_margin="0dp"
-                        android:background="@color/category_light_gray_color"
-                        android:contentDescription="My Button Description"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_brand_text_id3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="41dp"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="center_vertical"
-                        android:text="브랜드 명"
-                        android:textSize="10sp"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_name_text_id3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="61dp"
-                        android:gravity="center_vertical"
-                        android:layout_marginLeft="10dp"
-                        android:textStyle="bold"
-                        android:text="상품 이름"
-                        android:textSize="20sp"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_price_text_id3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="49dp"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="center_vertical"
-                        android:text="1000000원"
-                        android:textSize="15sp"
-                        />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/linear_view_vertical_id4"
-                    android:layout_width="205dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <android.widget.Button
-                        android:id="@+id/btn_product_id4"
-                        android:layout_width="205dp"
-                        android:layout_height="200dp"
-                        android:layout_margin="0dp"
-                        android:background="@color/category_light_gray_color"
-                        android:contentDescription="My Button Description"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_brand_text_id4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="41dp"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="center_vertical"
-                        android:text="브랜드 명"
-                        android:textSize="10sp"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_name_text_id4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="61dp"
-                        android:gravity="center_vertical"
-                        android:layout_marginLeft="10dp"
-                        android:textStyle="bold"
-                        android:text="상품 이름"
-                        android:textSize="20sp"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_price_text_id4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="49dp"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="center_vertical"
-                        android:text="1000000원"
-                        android:textSize="15sp"
-                        />
-
-                </LinearLayout>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:id="@+id/linear_view_vertical_id5"
-                    android:layout_width="205dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <android.widget.Button
-                        android:id="@+id/btn_product_id5"
-                        android:layout_width="205dp"
-                        android:layout_height="200dp"
-                        android:layout_margin="0dp"
-                        android:background="@color/category_light_gray_color"
-                        android:contentDescription="My Button Description"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_brand_text_id5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="41dp"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="center_vertical"
-                        android:text="브랜드 명"
-                        android:textSize="10sp"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_name_text_id5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="61dp"
-                        android:gravity="center_vertical"
-                        android:layout_marginLeft="10dp"
-                        android:textStyle="bold"
-                        android:text="상품 이름"
-                        android:textSize="20sp"
-                        />
-
-                    <TextView
-                        android:id="@+id/product_price_text_id5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="49dp"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="center_vertical"
-                        android:text="1000000원"
-                        android:textSize="15sp"
-                        />
-                </LinearLayout>
-
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="230dp" />
-        </LinearLayout>
-
-
-
-    </ScrollView>
-
-
-
-    <View
-        android:id="@+id/bar_rectangle_id"
-        android:layout_width="match_parent"
-        android:layout_height="68dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:background="#8E8BD8"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-
-
-    <View
-        android:id="@+id/go_home_id"
-        android:layout_width="33.75dp"
-        android:layout_height="33.75dp"
-        android:background="@drawable/gohome"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/product_category_recyclerView"
+        android:layout_width="390dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.977" />
-
-    <View
-        android:id="@+id/category_search_id"
-        android:layout_width="33.75dp"
-        android:layout_height="33.75dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/category_search"
-        app:layout_constraintBottom_toBottomOf="@+id/bar_rectangle_id"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.201"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.977" />
-
-    <View
-        android:id="@+id/mypage_id"
-        android:layout_width="33.75dp"
-        android:layout_height="33.75dp"
-        android:background="@drawable/mypage"
-        app:layout_constraintBottom_toBottomOf="@+id/bar_rectangle_id"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.800"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.977" />
-
+        app:layout_constraintTop_toBottomOf="@+id/winter_update_text_id"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
