--- a/app/src/main/res/layout/seller_activity_mypage_main.xml
+++ b/app/src/main/res/layout/seller_activity_mypage_main.xml
@@ -149,7 +149,7 @@
 
 
             <Button
-                android:id="@+id/btn_order_delivery_list"
+                android:id="@+id/btn_order_list"
                 android:layout_width="411dp"
                 android:layout_height="70dp"
                 android:layout_marginTop="5dp"
@@ -157,7 +157,7 @@
                 android:gravity="left"
                 android:paddingLeft="20dp"
                 android:paddingTop="20dp"
-                android:text="주문/배송 내역"
+                android:text="주문 내역 조회"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -165,7 +165,7 @@
                 tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
             <Button
-                android:id="@+id/btn_refund_exchange_list"
+                android:id="@+id/btn_exchange_refund_list"
                 android:layout_width="411dp"
                 android:layout_height="70dp"
                 android:layout_marginTop="5dp"
@@ -173,7 +173,7 @@
                 android:gravity="left"
                 android:paddingLeft="20dp"
                 android:paddingTop="20dp"
-                android:text="환불/교환 내역"
+                android:text="교환/환불 내역"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
