--- a/app/src/main/res/layout/detailpage_activity_main_option_select_complete.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_option_select_complete.xml
@@ -205,4 +205,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view" />
 
+    <TextView
+        android:id="@+id/text_productName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="172dp"
+        android:text="TextView"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        app:layout_constraintStart_toEndOf="@+id/mainImage"
+        app:layout_constraintTop_toTopOf="@+id/view" />
+
+    <TextView
+        android:id="@+id/text_productPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="20dp"
+        android:text="TextView"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        app:layout_constraintStart_toEndOf="@+id/mainImage"
+        app:layout_constraintTop_toBottomOf="@+id/text_productName" />
+
+    <ImageView
+        android:id="@+id/mainImage"
+        android:layout_width="154dp"
+        android:layout_height="170dp"
+        android:layout_marginTop="52dp"
+        app:layout_constraintTop_toBottomOf="@+id/color"
+        app:srcCompat="@drawable/category_component"
+        tools:layout_editor_absoluteX="27dp" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
